2015-05-07  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Apple/Interop.Apple.stat.cs:
	* Interop/Apple/Interop.Apple.uname.cs:
	* Interop/Apple/Interop.Apple.xattr.cs:
	* Interop/Apple/Interop.Apple.types.cs:
	* Interop/Apple/Interop.Apple.stat64.cs:
	* Interop/Apple/Interop.Apple.statfs.cs:
	* Interop/Windows/Interop.Windows.EAs.cs:
	* Interop/Apple/Interop.Apple.statfs64.cs:
	* Interop/Windows/Interop.Windows.Files.cs:
	* Interop/Windows/Interop.Windows.types.cs:
	* Interop/Windows/Interop.Windows.Backup.cs:
	* Interop/Windows/Interop.Windows.Errors.cs:
	* Interop/Apple/Interop.Apple.getattrlist.cs:
	* Interop/Windows/Interop.Windows.Streams.cs:
	* Interop/Windows/Interop.Windows.Volumes.cs:
	  Changed everything to use base API type definitions, with
	  "using" as alias to .NET types.

2015-05-07  Natalia Portillo  <claunia@claunia.com>

	* Tests/Interop.Apple.cs:
	  Comment testing values not persistent across reboots.

2015-05-07  Natalia Portillo  <claunia@claunia.com>

	* Interop/Windows/Interop.Windows.Files.cs:
	* Interop/Windows/Interop.Windows.types.cs:
	  Implemented Kernel32's GetFileInformationByHandle() and
	  GetFileInformationByHandleEx().

2015-05-07  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Windows/Interop.Windows.Volumes.cs:
	  Added Kernel32's GetVolumeInformation.

2015-05-04  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Windows/Interop.Windows.Backup.cs:
	  Added backup functions that allow to access ADSs and EAs on
	  any Windows NT version.

	* Interop/Windows/Interop.Windows.EAs.cs:
	* Interop/Windows/Interop.Windows.Files.cs:
	  Code enhancement.

2015-05-04  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Windows/Interop.Windows.Streams.cs:
	  Added Windows Server 2003 onward functions to search for
	  alternate data streams.

2015-05-04  Natalia Portillo  <claunia@claunia.com>

	* Interop/Windows/Interop.Windows.Files.cs: