@@ -1,5 +1,10 @@
 2015-05-07  Natalia Portillo  <claunia@claunia.com>
 
+	* Interop/FreeBSD/Interop.FreeBSD.types.cs:
+	  Correct order of XML documentation lines.
+
+2015-05-07  Natalia Portillo  <claunia@claunia.com>
+
 	* Claunia.IO.csproj:
 	* Interop/Apple/Interop.Apple.stat.cs:
 	* Interop/Apple/Interop.Apple.uname.cs:
